
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


struct socket {int so_flags; int so_state_change_cnt; } ;
struct sockaddr_in {int sin_port; int sin_addr; } ;
struct sockaddr {int dummy; } ;
struct proc {int dummy; } ;
struct in_addr {scalar_t__ s_addr; } ;
struct inpcb {scalar_t__ inp_lport; TYPE_1__* inp_pcbinfo; int inp_fport; int inp_faddr; int inp_flags; struct ifnet* inp_last_outifp; struct in_addr inp_laddr; struct socket* inp_socket; } ;
struct ifnet {int dummy; } ;
struct TYPE_2__ {int ipi_lock; } ;


 int EADDRINUSE ;
 int ECONNREFUSED ;
 int EINVAL ;
 scalar_t__ INADDR_ANY ;
 int INP_INADDR_ANY ;
 scalar_t__ IPPROTO_UDP ;
 scalar_t__ SOCK_PROTO (struct socket*) ;
 int SOF_ABORTED ;
 int WNT_RELEASE ;
 int in_pcb_checkstate (struct inpcb*,int ,int) ;
 int in_pcbbind (struct inpcb*,int *,struct proc*) ;
 int in_pcbladdr (struct inpcb*,struct sockaddr*,struct in_addr*,unsigned int,struct ifnet**,int ) ;
 struct inpcb* in_pcblookup_hash (TYPE_1__*,int ,int ,struct in_addr,scalar_t__,int ,int *) ;
 int in_pcbrehash (struct inpcb*) ;
 int lck_rw_done (int ) ;
 int lck_rw_lock_exclusive (int ) ;
 int lck_rw_try_lock_exclusive (int ) ;
 scalar_t__ nstat_collect ;
 int nstat_pcb_invalidate_cache (struct inpcb*) ;
 int socket_lock (struct socket*,int ) ;
 int socket_unlock (struct socket*,int ) ;

int
in_pcbconnect(struct inpcb *inp, struct sockaddr *nam, struct proc *p,
    unsigned int ifscope, struct ifnet **outif)
{
 struct in_addr laddr;
 struct sockaddr_in *sin = (struct sockaddr_in *)(void *)nam;
 struct inpcb *pcb;
 int error;
 struct socket *so = inp->inp_socket;
 if ((error = in_pcbladdr(inp, nam, &laddr, ifscope, outif, 0)) != 0)
  return (error);

 socket_unlock(so, 0);
 pcb = in_pcblookup_hash(inp->inp_pcbinfo, sin->sin_addr, sin->sin_port,
     inp->inp_laddr.s_addr ? inp->inp_laddr : laddr,
     inp->inp_lport, 0, ((void*)0));
 socket_lock(so, 0);






 if ((so->so_flags & SOF_ABORTED) != 0)
  return (ECONNREFUSED);

 if (pcb != ((void*)0)) {
  in_pcb_checkstate(pcb, WNT_RELEASE, pcb == inp ? 1 : 0);
  return (EADDRINUSE);
 }
 if (inp->inp_laddr.s_addr == INADDR_ANY) {
  if (inp->inp_lport == 0) {
   error = in_pcbbind(inp, ((void*)0), p);
   if (error)
    return (error);
  }
  if (!lck_rw_try_lock_exclusive(inp->inp_pcbinfo->ipi_lock)) {




   socket_unlock(so, 0);
   lck_rw_lock_exclusive(inp->inp_pcbinfo->ipi_lock);
   socket_lock(so, 0);
  }
  inp->inp_laddr = laddr;

  inp->inp_last_outifp = (outif != ((void*)0)) ? *outif : ((void*)0);
  inp->inp_flags |= INP_INADDR_ANY;
 } else {
  if (inp->inp_lport == 0)
   return (EINVAL);
  if (!lck_rw_try_lock_exclusive(inp->inp_pcbinfo->ipi_lock)) {




   socket_unlock(so, 0);
   lck_rw_lock_exclusive(inp->inp_pcbinfo->ipi_lock);
   socket_lock(so, 0);
  }
 }
 inp->inp_faddr = sin->sin_addr;
 inp->inp_fport = sin->sin_port;
 if (nstat_collect && SOCK_PROTO(so) == IPPROTO_UDP)
  nstat_pcb_invalidate_cache(inp);
 in_pcbrehash(inp);
 lck_rw_done(inp->inp_pcbinfo->ipi_lock);
 return (0);
}
